Stretched result item links and prevented results showing that link to homepage.

--- a/assets/sass/plugin-programmable-search-engine/programmable-search-engine.scss
+++ b/assets/sass/plugin-programmable-search-engine/programmable-search-engine.scss
@@ -150,6 +150,7 @@ div#{{ .ResultsOverlay.ID }} {
           
           padding: 0;
           margin: 0;
+          position: relative;
           
           ///Result content wrapper
           article.{{ .ResultItems.Item.Article.ClassName }} {
@@ -184,6 +185,15 @@ div#{{ .ResultsOverlay.ID }} {
                   
                 }
                 
+                &::after {
+                  position: absolute;
+                  top: 0;
+                  right: 0;
+                  bottom: 0;
+                  left: 0;
+                  z-index: 1;
+                  content: "";
+                }
               } // a.{{ .ResultItems.Item.Title.ClassName }}
               
             } // header.{{ .ResultItems.Item.Header.ClassName }}
